Replace old postgress key to new one

--- a/charts/backstage/templates/backend-deployment.yaml
+++ b/charts/backstage/templates/backend-deployment.yaml
@@ -54,7 +54,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ include "backend.postgresql.passwordSecret" .}}
-                  key: postgresql-password
+                  key: postgres-password
           volumeMounts:
             {{- if .Values.backend.postgresCertMountEnabled }}
             - name: postgres-ca
