--- a/charts/backstage/values-akitlabs.yaml
+++ b/charts/backstage/values-akitlabs.yaml
@@ -13,7 +13,7 @@ appConfig:
     requestUrl: 'https://backstage.akitlabs.com/api/techdocs'
 
 issuer:
-  email:
+  email: janusz.kujawa@gmail.com
   clusterIssuer: 'selfsigned-cluster-issuer'
 
 #auth:
