--- a/charts/backstage/Chart.yaml
+++ b/charts/backstage/Chart.yaml
@@ -12,13 +12,14 @@ version: 0.1.3
 appVersion: v0.1.1-alpha.23
 
 sources:
-  - https://github.com/backstage/devopsapp84
+  - https://github.com/backstage/backstage
   - https://github.com/spotify/lighthouse-audit-service
 
 dependencies:
   - name: postgresql
     condition: postgresql.enabled
-    version: 9.4.1
+    #version: 9.4.1
+    version: 11.1.19
     repository: https://charts.bitnami.com/bitnami
 
 maintainers:
