--- a/charts/backstage/templates/lighthouse-deployment.yaml
+++ b/charts/backstage/templates/lighthouse-deployment.yaml
@@ -49,7 +49,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ include "lighthouse.postgresql.passwordSecret" . }}
-                  key: postgres-password
+                  key: postgresql-password
 
           {{- if .Values.lighthouse.postgresCertMountEnabled }}
           volumeMounts:
