--- a/.github/workflows/helm-releaser.yaml
+++ b/.github/workflows/helm-releaser.yaml
@@ -1,9 +1,9 @@
-name: Release Charts
+name: Helm Chart Release
 
 on:
-  pull_request:
+  push:
     branches:
-      - main
+      - dev
 
 jobs:
   release:
