--- a/charts/backstage/templates/postgresql-password-backend-secret.yaml
+++ b/charts/backstage/templates/postgresql-password-backend-secret.yaml
@@ -11,5 +11,5 @@ metadata:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-delete-policy": "before-hook-creation"
 data:
-  postgresql-password: {{ .Values.appConfig.backend.database.connection.password | b64enc }}
+  postgres-password: {{ .Values.appConfig.backend.database.connection.password | b64enc }}
 {{- end }}
