--- a/charts/backstage/templates/postgresql-password-lighthouse-secret.yaml
+++ b/charts/backstage/templates/postgresql-password-lighthouse-secret.yaml
@@ -12,6 +12,6 @@ metadata:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-delete-policy": "before-hook-creation"
 data:
-  postgresql-password: {{ .Values.lighthouse.database.connection.password | b64enc }}
+  postgres-password: {{ .Values.lighthouse.database.connection.password | b64enc }}
 {{- end }}
 {{- end }}
