Switch psotgres to 10.X

--- a/charts/backstage/templates/tests/test-postgresql.yaml
+++ b/charts/backstage/templates/tests/test-postgresql.yaml
@@ -21,7 +21,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: {{ include "backend.postgresql.passwordSecret" .}}
-              key: postgres-password
+              key: postgresql-password
         - name: PG_DBNAME
           value: {{ .Values.appConfig.backend.database.connection.database }}
       command:
