--- a/charts/backstage-psql10/Chart.yaml
+++ b/charts/backstage-psql10/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
-name: backstage
+name: backstage-psql10
 description: A Helm chart for Backstage
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.0.7
+version: 0.0.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
