--- a/charts/backstage-psql11/Chart.yaml
+++ b/charts/backstage-psql11/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
-name: backstage
+name: backstage-psql11
 description: A Helm chart for Backstage
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.0.7
+version: 0.0.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
@@ -18,7 +18,7 @@ sources:
 dependencies:
   - name: postgresql
     condition: postgresql.enabled
-    version: 10.16.2
+    version: 11.1.19
     repository: https://charts.bitnami.com/bitnami
 
 maintainers:
