--- a/charts/backstage-psql11/templates/issuer.yaml
+++ b/charts/backstage-psql11/templates/issuer.yaml
@@ -1,19 +1,11 @@
 {{- if (and (.Capabilities.APIVersions.Has "cert-manager.io/v1") .Values.issuer.email )  -}}
 {{/*  Only install issuer if it doesn't already exist in the cluster */}}
 {{- if not ( lookup "cert-manager.io/v1" "ClusterIssuer"  "" .Values.issuer.clusterIssuer  ) }}
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: {{ .Values.issuer.clusterIssuer }}
 spec:
-  acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
-    email: {{ required "expected a valid .Values.issuer.email to enable ClusterIssuer" .Values.issuer.email }}
-    privateKeySecretRef:
-      name: {{ required "expected .Values.issuer.cluster-issuer to not be empty (letsencrypt-prod | letsencrypt-staging)" .Values.issuer.clusterIssuer }}
-    solvers:
-    - http01:
-        ingress:
-          class: nginx
+  selfSigned: {}
 {{- end -}}
 {{- end -}}
