--- a/charts/istio-base/Chart.yaml
+++ b/charts/istio-base/Chart.yaml
@@ -12,3 +12,7 @@ sources:
   - http://github.com/istio/istio
 engine: gotpl
 icon: https://istio.io/latest/favicons/android-192x192.png
+
+maintainers:
+  - name: Janusz Kujawa
+    email: janusz.kujawa@gmail.com
