--- a/charts/backstage-psql10/Chart.yaml
+++ b/charts/backstage-psql10/Chart.yaml
@@ -5,7 +5,7 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.0.2
+version: 0.0.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
@@ -28,3 +28,5 @@ maintainers:
   - name: David Tuite
     email: david@roadie.io
     url: https://roadie.io
+  - name: Janusz Kujawa
+    email: janusz.kujawa@gmail.com
