--- a/charts/backstage-psql9/values.yaml
+++ b/charts/backstage-psql9/values.yaml
@@ -6,8 +6,8 @@ frontend:
   enabled: false
   replicaCount: 1
   image:
-    repository: martinaif/backstage-k8s-demo-frontend
-    tag: test1
+    repository: januszkujawa84/backstage-frontend
+    tag: dev
     pullPolicy: IfNotPresent
   containerPort: 80
   serviceType: ClusterIP
@@ -23,8 +23,8 @@ backend:
   demoData: true
   replicaCount: 1
   image:
-    repository: martinaif/backstage-k8s-demo-backend
-    tag: 20210423T1550
+    repository: januszkujawa84/backstage-backend
+    tag: dev
     pullPolicy: IfNotPresent
   containerPort: 7007
   serviceType: ClusterIP
@@ -103,10 +103,10 @@ appConfig:
       client: pg
       connection:
         database: backstage_plugin_catalog
-        host:
-        user:
-        port:
-        password:
+        host: backstage-postgresql
+        user: backstage
+        port: 5432
+        password: init1234
         ssl:
           rejectUnauthorized: false
           ca:
