--- a/charts/backstage-psql9/Chart.yaml
+++ b/charts/backstage-psql9/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: backstage-psql9
-description: A Helm chart for Backstage with PostgreSQL 9.X (self hosted)
+description: Backstage with PostgreSQL 9.X (self hosted)
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
