--- a/charts/istio-base/Chart.yaml
+++ b/charts/istio-base/Chart.yaml
@@ -5,7 +5,7 @@ name: base
 version: 1.13.3
 appVersion: 1.13.3
 tillerVersion: ">=2.7.2"
-description: Helm chart for deploying Istio cluster resources and CRDs
+description: Helm chart for deploying Istio cluster resources and CRDs - self hosted
 keywords:
   - istio
 sources:
