--- a/charts/istiod/Chart.yaml
+++ b/charts/istiod/Chart.yaml
@@ -5,7 +5,7 @@ name: istiod
 version: 1.13.3
 appVersion: 1.13.3
 tillerVersion: ">=2.7.2"
-description: Helm chart for istio control plane
+description: Helm chart for istio control plane - selfhosted
 keywords:
   - istio
   - istiod
