--- a/charts/backstage-psql10/Chart.yaml
+++ b/charts/backstage-psql10/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: backstage-psql10
-description: Backstage with PostgreSQL 10.X (self hosted)
+description: Backstage with PostgreSQL 10.X (self hosted DevopsApp84) 
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
