--- a/charts/backstage-base/values.yaml
+++ b/charts/backstage-base/values.yaml
@@ -3,13 +3,13 @@
 # Declare variables to be passed into your templates.
 
 frontend:
-  enabled: false
+  enabled: true
   replicaCount: 1
   image:
-    repository: martinaif/backstage-k8s-demo-frontend
-    tag: test1
+    repository: januszkujawa84/backstage-frontend
+    tag: base
     pullPolicy: IfNotPresent
-  containerPort: 80
+  containerPort: 3000
   serviceType: ClusterIP
   resources:
     requests:
@@ -19,12 +19,12 @@ frontend:
 
 backend:
   enabled: true
-  nodeEnv: development
+  #nodeEnv: development
   demoData: true
   replicaCount: 1
   image:
-    repository: martinaif/backstage-k8s-demo-backend
-    tag: 20210423T1550
+    repository: januszkujawa84/backstage-backend
+    tag: base
     pullPolicy: IfNotPresent
   containerPort: 7007
   serviceType: ClusterIP
@@ -62,13 +62,9 @@ lighthouse:
 nameOverride: ''
 fullnameOverride: ''
 
-ingress:
-  annotations:
-    kubernetes.io/ingress.class: nginx
-
 issuer:
-  email:
-  clusterIssuer: 'letsencrypt-staging'
+  email: ''
+  clusterIssuer: ''
 
 global:
   postgresql:
@@ -79,8 +75,6 @@ global:
 postgresql:
   enabled: true
   nameOverride: postgresql
-  service:
-    port: ''
   tls:
     enabled: true
     certificatesSecret: backstage-postgresql-certs
@@ -92,15 +86,16 @@ postgresql:
 
 appConfig:
   app:
-    baseUrl: https://demo.example.com
-    title: Backstage
+    baseUrl: https://backstage.172.25.0.3.nip.io
+    title: Backstage Dev
+    ghorg: devopsapp84
     googleAnalyticsTrackingId:
   backend:
-    baseUrl: https://demo.example.com
+    baseUrl: https://backstage.172.25.0.3.nip.io
     listen:
       port: 7007
     cors:
-      origin: https://demo.example.com
+      origin: https://backstage.172.25.0.3.nip.io
     database:
       client: pg
       connection:
@@ -113,14 +108,14 @@ appConfig:
           rejectUnauthorized: false
           ca:
   sentry:
-    organization: example-org-name
+    organization: backstage-dev
   techdocs:
-    storageUrl: https://demo.example.com/api/techdocs/static/docs
-    requestUrl: https://demo.example.com/api/techdocs
+    storageUrl: https://backstage.172.25.0.3.nip.io/api/techdocs/static/docs
+    requestUrl: https://backstage.172.25.0.3.nip.io/api/techdocs
   lighthouse:
-    baseUrl: https://demo.example.com/lighthouse-api
+    baseUrl: https://backstage.172.25.0.3.nip.io/lighthouse-api
   rollbar:
-    organization: example-org-name
+    organization: backstage-dev
 
   # Auth config has recently moved into the app config file in upstream Backstage. However,
   # most of this config simply mandates that items like the client id and client secret should
@@ -181,7 +176,7 @@ auth:
     clientId: a
     clientSecret: a
   github:
-    clientId: c
+    clientId:  c
     clientSecret: c
   gitlab:
     clientId: b
@@ -212,7 +207,7 @@ auth:
   # This is a 'Personal Access Token'
   circleciAuthToken: r
   # Used by the scaffolder to create GitHub repos. Must have 'repo' scope.
-  githubToken: g
+  githubToken: 
   gitlabToken: g
   newRelicRestApiKey: r
   travisciAuthToken: fake-travis-ci-auth-token
